<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2e3237"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mobil_logo_layout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="285dp"
            android:layout_height="81dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/imageView"
            android:background="@drawable/mobil_tmw"
            android:foregroundGravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/mobi"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Edit your profile"
            android:textColor="#888888"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#3b4148"
            android:hint="@string/name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="#888888"
            android:textColorHint="#999999" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#3b4148"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#888888"
            android:textColorHint="#999999" />
        <EditText
            android:id="@+id/mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#3b4148"
            android:hint="@string/mobile"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPhonetic"
            android:textColor="#888888"
            android:textColorHint="#999999" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#3b4148"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#888888"
            android:textColorHint="#999999" />

        <EditText
            android:id="@+id/carBrand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#3b4148"
            android:hint="@string/carBrand"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#888888"
            android:textColorHint="#999999"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/carModel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#3b4148"
            android:hint="@string/carModel"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#888888"
            android:textColorHint="#999999"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/carYear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#3b4148"
            android:hint="@string/carYear"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#888888"
            android:textColorHint="#999999"
            android:visibility="gone"/>

        <!-- Login Button -->

        <Button
            android:id="@+id/btnCompRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea1624"
            android:text="Apply Changes"
            android:textColor="#ffffff"
            android:visibility="gone"/>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea1624"
            android:text="Continue"
            android:textColor="#ffffff" />


    </LinearLayout>

</LinearLayout>